// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TeamsReducer Load teams failed should return loaded false 1`] = `
Object {
  "entities": Object {},
  "loaded": false,
  "loading": false,
  "selectedTeam": null,
}
`;

exports[`TeamsReducer Load teams should return loading 1`] = `
Object {
  "entities": Object {},
  "loaded": false,
  "loading": true,
  "selectedTeam": null,
}
`;

exports[`TeamsReducer Load teams success should return loaded with entities 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "_id": 1,
      "ageGroup": "ADULTS",
      "genderKind": "MALE",
      "imgUrl": "",
      "name": "team #1",
      "sport": "basketball",
    },
    "2": Object {
      "_id": 2,
      "ageGroup": "ADULTS",
      "genderKind": "FEMALE",
      "imgUrl": "",
      "name": "team #2",
      "sport": "football",
    },
    "3": Object {
      "_id": 3,
      "ageGroup": "ADULTS",
      "genderKind": "MALE",
      "imgUrl": "",
      "name": "team #3",
      "sport": "football",
    },
  },
  "loaded": true,
  "loading": false,
  "selectedTeam": null,
}
`;

exports[`TeamsReducer Select team should return selected team 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "_id": 1,
      "ageGroup": "ADULTS",
      "genderKind": "MALE",
      "imgUrl": "",
      "name": "team #1",
      "sport": "basketball",
    },
    "2": Object {
      "_id": 2,
      "ageGroup": "ADULTS",
      "genderKind": "FEMALE",
      "imgUrl": "",
      "name": "team #2",
      "sport": "football",
    },
    "3": Object {
      "_id": 3,
      "ageGroup": "ADULTS",
      "genderKind": "MALE",
      "imgUrl": "",
      "name": "team #3",
      "sport": "football",
    },
  },
  "loaded": true,
  "loading": false,
  "selectedTeam": 1,
}
`;

exports[`TeamsReducer undefined action should return the default state 1`] = `
Object {
  "entities": Object {},
  "loaded": false,
  "loading": false,
  "selectedTeam": null,
}
`;
